fix z-index issue w/card overlay

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -171,10 +171,6 @@
         z-index: 0;
     }
 
-    .card_show {
-        z-index: 10;
-    }
-
     #artist-link {
         display: none;
     }
